index.css
*, *::before, *::after {
  box-sizing: border-box;
}
body {
  font-family: 'Fira Code', monospace;
  height: calc(100vh - 1rem);
  background-color: #280004;
  border: 4px solid #4C230A;
  margin: 0.5rem;
}
main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}
section {
  display: flex;
  flex-direction: column;
  align-items: center;
}
h1 {
  margin-bottom: 2rem;
  font-weight: 300;
  font-size: 2rem;
  color: #CCC9A1;
}
ul {
  display: flex;
  gap: 1.5rem;
  padding-left: 0;
  list-style-type: none;
}
li {
  font-weight: 400;
  font-size: 1.25rem;
}
a {
  text-decoration: none;
  border-bottom: 2px solid #A53F2B;
  padding-bottom: 0.25rem;
}
a:link,
a:visited {
  color: #CD543C;
}
a:hover,
a:active {
  color: #A53F2B;
  border-bottom: 2px solid #823221;
}

